--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -192,13 +192,13 @@
         </div>
         <div class="footer-col">
             <h4>Contact</h4>
-            <a href="mailto:luke.mccarthy.home@gmail.com">Email Us</a>
-            <a>Melbourne, Australia</a>
+            <a href="mailto:info@morti.com.au">Email Us</a>
+            <a>Australia</a>
             <a href="https://morti.com.au">morti.com.au</a>
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; <%= new Date().getFullYear() %> Morti Pty Ltd · Melbourne, Australia
+        &copy; <%= new Date().getFullYear() %> Morti Pty Ltd · Australia
     </div>
 </footer>
 
