--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -156,7 +156,7 @@
             </form>
 
             <div class="contact-info">
-                Or email directly: <a href="mailto:luke.mccarthy.home@gmail.com">luke.mccarthy.home@gmail.com</a>
+                Or email directly: <a href="mailto:info@morti.com.au">info@morti.com.au</a>
             </div>
 
             <script>
@@ -190,13 +190,13 @@
         </div>
         <div class="footer-col">
             <h4>Contact</h4>
-            <a href="mailto:luke.mccarthy.home@gmail.com">Email Us</a>
-            <a>Melbourne, Australia</a>
+            <a href="mailto:info@morti.com.au">Email Us</a>
+            <a>Australia</a>
             <a href="https://morti.com.au">morti.com.au</a>
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; <%= new Date().getFullYear() %> Morti Pty Ltd · Melbourne, Australia
+        &copy; <%= new Date().getFullYear() %> Morti Pty Ltd · Australia
     </div>
 </footer>
 
